--- a/_news/2024_CAPL.md
+++ b/_news/2024_CAPL.md
@@ -5,5 +5,5 @@ inline: true
 ---
 
 
-[CPAL 2024×3]   Three papers got accpeted in [CPAL](https://cpal.cc/) at spotlight track
+<span class="badge-flag" data-conf="iclr">CPAL 2024×3</span>   Three papers got accpeted in [CPAL](https://cpal.cc/) at spotlight track
 
