--- a/_news/2024_bmvc.md
+++ b/_news/2024_bmvc.md
@@ -6,5 +6,5 @@ inline: true
 
 
 
-[BMVC 2024]  We got one paper accepted at <font color=009f06>BMVC 2024</font>: [Are Sparse Neural Networks Better Hard
+<span class="badge-flag" data-conf="iclr">BMVC 2024</span>  We got one paper accepted at <font color=009f06>BMVC 2024</font>: [Are Sparse Neural Networks Better Hard
 Sample Learners?](https://arxiv.org/pdf/2409.09196)
