--- a/_news/2025_CAI_W.md
+++ b/_news/2025_CAI_W.md
@@ -6,5 +6,5 @@ inline: true
 
 
 
-[Organization: CAI 2025 Workshops] Thrilled to co-organize the CAI 2025 Workshops [LLM Stable Pretraining](https://stable-pretraining-paradigms-for-llms.github.io/stable-pretraining-paradigms-for-llms-workshop.github.io/index) and [Federated Optimization and Learning](https://xw00616.github.io/Fairness-aware-Federated-Optimization-and-Learning/index).
+<span class="badge-flag" data-conf="iclr">Organization: CAI 2025 Workshops</span> Thrilled to co-organize the CAI 2025 Workshops [LLM Stable Pretraining](https://stable-pretraining-paradigms-for-llms.github.io/stable-pretraining-paradigms-for-llms-workshop.github.io/index) and [Federated Optimization and Learning](https://xw00616.github.io/Fairness-aware-Federated-Optimization-and-Learning/index).
 
