--- a/_news/2025_CAPL.md
+++ b/_news/2025_CAPL.md
@@ -5,5 +5,5 @@ inline: true
 ---
 
 
-[CPAL 2025] Our paper [Q-Galore](https://arxiv.org/abs/2407.08296) got accpeted in [CPAL](https://cpal.cc/).
+<span class="badge-flag" data-conf="iclr">CPAL 2025</span> Our paper [Q-Galore](https://arxiv.org/abs/2407.08296) got accpeted in [CPAL](https://cpal.cc/).
 
