--- a/_news/2025_ICML.md
+++ b/_news/2025_ICML.md
@@ -4,4 +4,4 @@ date: 2025-05-01 15:59:00-0400
 inline: true
 ---
 
-[ICML 2025×2] Two papers accepted at ICML 2025:  (1) Weights Low rank training [WeLore](https://arxiv.org/abs/2407.11239) (2) Weights Low rank fine-tuning [LIFT](https://arxiv.org/pdf/2506.00772).
+<span class="badge-flag" data-conf="iclr">ICML 2025×2</span> Two papers accepted at ICML 2025:  (1) Weights Low rank training [WeLore](https://arxiv.org/abs/2407.11239) (2) Weights Low rank fine-tuning [LIFT](https://arxiv.org/pdf/2506.00772).
