--- a/_news/2022_AAAI.md
+++ b/_news/2022_AAAI.md
@@ -4,5 +4,5 @@ date: 2022-11-20 15:59:00-0400
 inline: true
 ---
 
-[AAAI 2023] Our paper [Lottery Pools](https://arxiv.org/abs/2208.10842) got accepted by <font color=009f06>AAAI 2023</font>
+<span class="badge-flag" data-conf="iclr">AAAI 2023</span> Our paper [Lottery Pools](https://arxiv.org/abs/2208.10842) got accepted by <font color=009f06>AAAI 2023</font>
 
