--- a/_news/2022_UAI.md
+++ b/_news/2022_UAI.md
@@ -4,5 +4,5 @@ date: 2022-5-2 15:59:00-0400
 inline: true
 ---
 
-[UAI 2022]   Our paper [Sup-tickets sparse training](https://arxiv.org/abs/2205.15322) got accepted by <font color=009f06>UAI 2022</font>
+<span class="badge-flag" data-conf="iclr">UAI 2022</span>   Our paper [Sup-tickets sparse training](https://arxiv.org/abs/2205.15322) got accepted by <font color=009f06>UAI 2022</font>
 
