--- a/_news/2023_ECML.md
+++ b/_news/2023_ECML.md
@@ -4,5 +4,5 @@ date: 2023-6-20 15:59:00-0400
 inline: true
 ---
 
-[ECML 2023×2]   Two paper got accepted by <font color=009f06>ECML-PKDD 2023</font>: <font color=009f06>Robust overfitting</font>, <font color=009f06>RDebiased Sparse Training</font>
+<span class="badge-flag" data-conf="iclr">ECML 2023×2</span>   Two paper got accepted by <font color=009f06>ECML-PKDD 2023</font>: <font color=009f06>Robust overfitting</font>, <font color=009f06>RDebiased Sparse Training</font>
 
