--- a/_news/2023_ICML.md
+++ b/_news/2023_ICML.md
@@ -3,4 +3,4 @@ layout: post
 date: 2023-04-20 15:59:00-0400
 inline: true
 ---
-[ICML 2023] One paper got accepted by <font color=009f06>ICML 2023</font>: [Large Kernel Distillation](Are Large Kernels Better Teachers than Transformers for ConvNets?)
+<span class="badge-flag" data-conf="iclr">ICML 2023</span> One paper got accepted by <font color=009f06>ICML 2023</font>: [Large Kernel Distillation](Are Large Kernels Better Teachers than Transformers for ConvNets?)
