--- a/_news/2022_Log.md
+++ b/_news/2022_Log.md
@@ -4,5 +4,5 @@ date: 2022-11-2 15:59:00-0400
 inline: true
 ---
 
-<span class="badge-flag" data-conf="iclr">LoG 2022 BEST PAPER</span>   Our paper [Untrained GNNs Tickets](https://arxiv.org/abs/2211.15335) receive the  <font color=009f06> <b>  Best Paper Award </b>  from LoG 2022 </font>
+<span class="badge-flag" data-conf="publication">LoG 2022 BEST PAPER</span>   Our paper [Untrained GNNs Tickets](https://arxiv.org/abs/2211.15335) receive the  <font color=009f06> <b>  Best Paper Award </b>  from LoG 2022 </font>
 
