--- a/_news/2024_ICML.md
+++ b/_news/2024_ICML.md
@@ -6,4 +6,4 @@ inline: true
 
 
 
-<span class="badge-flag" data-conf="iclr">ICML 2024×3</span> &#128293; We got THREE paper accepted at ICML 2024: (1) LLM pruning [OWL](https://arxiv.org/pdf/2310.05175.pdf)   <font color=009f06>(with Google Research)</font> (2) understanding the small magnitude in LLM [JunkDNA hypothesis](https://arxiv.org/pdf/2310.02277.pdf) <font color=009f06>(with Intel Research)</font>. (3) [BiDST](https://proceedings.mlr.press/v235/ji24a.html) 
+<span class="badge-flag" data-conf="publication">ICML 2024×3</span> &#128293; We got THREE paper accepted at ICML 2024: (1) LLM pruning [OWL](https://arxiv.org/pdf/2310.05175.pdf)   <font color=009f06>(with Google Research)</font> (2) understanding the small magnitude in LLM [JunkDNA hypothesis](https://arxiv.org/pdf/2310.02277.pdf) <font color=009f06>(with Intel Research)</font>. (3) [BiDST](https://proceedings.mlr.press/v235/ji24a.html) 
