--- a/_news/2025_ACM.md
+++ b/_news/2025_ACM.md
@@ -4,4 +4,4 @@ date: 2025-08-21 15:59:00-0400
 inline: true
 ---
 
-<span class="badge-flag" data-conf="iclr">ACM Sigspatial</span> [Into the Unknown](https://arxiv.org/pdf/2506.14070) is accepted at ACM Sigspatial, we build urban foundation model for individuals’ next-location prediction.
+<span class="badge-flag" data-conf="publication">ACM Sigspatial</span> [Into the Unknown](https://arxiv.org/pdf/2506.14070) is accepted at ACM Sigspatial, we build urban foundation model for individuals’ next-location prediction.
