--- a/_news/2025_ICLR.md
+++ b/_news/2025_ICLR.md
@@ -4,4 +4,4 @@ date: 2025-02-01 15:59:00-0400
 inline: true
 ---
 
-<span class="badge-flag" data-conf="iclr">ICLR 2025×3</span> THREE papers accepted at ICLR 2025:  (1) Normalization for LLMs [Mix-LN](https://arxiv.org/pdf/2412.13795v1) (2) Enhancing LLM Alignment with Ternary Preferences [TODO](https://arxiv.org/pdf/2411.02442) (3) Debiasing via Spuriousness Ranking [SEBRA](https://kadarsh22.github.io/sebra_iclr25/).
+<span class="badge-flag" data-conf="publication">ICLR 2025×3</span> THREE papers accepted at ICLR 2025:  (1) Normalization for LLMs [Mix-LN](https://arxiv.org/pdf/2412.13795v1) (2) Enhancing LLM Alignment with Ternary Preferences [TODO](https://arxiv.org/pdf/2411.02442) (3) Debiasing via Spuriousness Ranking [SEBRA](https://kadarsh22.github.io/sebra_iclr25/).
