--- a/_news/2025_ACL.md
+++ b/_news/2025_ACL.md
@@ -6,5 +6,5 @@ inline: true
 
 
 
-<span class="badge-flag" data-conf="iclr">ACL 2025</span>  Our paper [OWS](https://arxiv.org/abs/2405.18380) about LLM PEFT has been accepted to ACL 2025.
+<span class="badge-flag" data-conf="publication">ACL 2025</span>  Our paper [OWS](https://arxiv.org/abs/2405.18380) about LLM PEFT has been accepted to ACL 2025.
 
