--- a/_news/2025_BMVC.md
+++ b/_news/2025_BMVC.md
@@ -4,4 +4,4 @@ date: 2025-08-21 15:59:00-0400
 inline: true
 ---
 
-<span class="badge-flag" data-conf="iclr">BMVC 2025</span> Our paper [CLIMB-3D](https://arxiv.org/pdf/2502.17429), about continual learning for imbalanced 3D instance segmentation, has been accepted at BMVC 2025.
+<span class="badge-flag" data-conf="publication">BMVC 2025</span> Our paper [CLIMB-3D](https://arxiv.org/pdf/2502.17429), about continual learning for imbalanced 3D instance segmentation, has been accepted at BMVC 2025.
