--- a/_news/2025_CEUS.md
+++ b/_news/2025_CEUS.md
@@ -4,4 +4,4 @@ date: 2025-06-02 15:59:00-0400
 inline: true
 ---
 
-<span class="badge-flag" data-conf="iclr">Journal CEUS</span> Our paper about urban space foundation model [CaLLiPer](https://www.sciencedirect.com/science/article/pii/S0198971525000523) is accepted at Computers Environment And Urban Systems.
+<span class="badge-flag" data-conf="publication">Journal CEUS</span> Our paper about urban space foundation model [CaLLiPer](https://www.sciencedirect.com/science/article/pii/S0198971525000523) is accepted at Computers Environment And Urban Systems.
