--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -52,6 +52,18 @@
   }
 
 
+@inproceedings{yin2023pruning,
+  abbr={ICLR 2025},
+  title={Sebra: DeBiasing through Self-Guided Bias Ranking},
+  author={Kappiyath, Adarsh and Chaudhuri, Abhra and Jaiswal, Ajay and Liu, Ziquan and Li, Yunpeng and Zhu, Xiatian and <b>Yin, Lu</b>&dagger; (<b>&dagger; corresponding author</b>)},
+  html={https://arxiv.org/abs/2501.18277},
+  code={https://kadarsh22.github.io/sebra_iclr25/},
+  selected={true},
+  year={2025}
+  }
+
+
+
 @inproceedings{yin2023OWL,
   abbr={ICML 2024},
   title={Outlier Weighed Layerwise Sparsity OWL: A Missing Secret Sauce for Pruning LLMs to High Sparsity},
