--- a/_news/2023_NWO.md
+++ b/_news/2023_NWO.md
@@ -4,5 +4,5 @@ date: 2023-12-20 15:59:00-0400
 inline: true
 ---
 
-<span class="badge-flag" data-conf="funding">Grant: NWO</span>   We have been awarded 10,000,000 credits for the use of NVIDIA A100 GPUs, totaling 78,120 hours. Our sincere thanks go to <span style='color:#009f06;'>NWO</span>.
+<span class="badge-flag" data-conf="Grant">Grant: NWO</span>   We have been awarded 10,000,000 credits for the use of NVIDIA A100 GPUs, totaling 78,120 hours. Our sincere thanks go to <span style='color:#009f06;'>NWO</span>.
 
