--- a/_news/2026_AIRR.md
+++ b/_news/2026_AIRR.md
@@ -4,4 +4,4 @@ date: 2026-2-05 15:59:00-0400
 inline: true
 ---
 
-<span class="badge-flag" data-conf="Grant">AIRR HPC</span> We gratefully acknowledge support from AIRR advanced supercomputers (UK; NVIDIA H200)
+<span class="badge-flag" data-conf="grant">AIRR HPC</span> We gratefully acknowledge support from AIRR advanced supercomputers (UK; NVIDIA H200)
